--- a/css/splash.css
+++ b/css/splash.css
@@ -18,7 +18,7 @@ html, body { position: fixed; height: 100%; width: 100%; }
 
 h1 {
   font-family: 'Dosis', 'Lato', sans-serif;
-  font-size: 70px;
+  font-size: 20px;
   font-weight: 200;
   width: 100%;
   overflow: hidden;
@@ -30,23 +30,29 @@ h1 {
   left: 0;
   letter-spacing: 14px;
   text-align: center;
-  margin-top: 550px;
-  margin-left: -400px;
+  margin-top: 800px;
+  margin-left: -600px;
 }
+
 
 /***************
 LOGO
 ***************/
 .logoTitle{
- margin-top: 50%;
- margin-right: -10%;
+  position: fixed;
+  margin-top: 59.5%;
+  margin-left: -39%;
+  z-index:100;
 }
 
 .puzzle {
-  margin-top: 51%;
-  left: 10%;
-  position: absolute;
+  z-index:100;
+  margin-top: 58%;
+  margin-left: -49%;
+  position: fixed;
 }
+
+
 /***************
 
 ***************/
