--- a/views/board.html
+++ b/views/board.html
@@ -31,9 +31,16 @@
   <body id="board">
     <script src="../js/sound.js"></script>
     <audio id='Drone' src='../sound/Drone.mp3'></audio>
-    <button class='stopButton' type='button'>Pause Music</button>
+    <div class='stopButton'>
+        <i class="fa fa-play-circle"></i>
+    </div>
+    <button  type='button'>Pause Music</button>
     <button class='playButton' type='button'>Play Music</button>
-    <div id="logoutButton"></div>
-    <div id="trashcan"><img src="../images/trashcan.png" alt="trashcan"></div>
+    <div id="logoutButton">
+        <i class="fa fa-sign-out"></i>
+    </div>
+    <div id="trashcan">
+       <i class="fa fa-trash-o"></i>
+    </div>
   </body>
 </html>
