--- a/css/splash.css
+++ b/css/splash.css
@@ -33,15 +33,21 @@ h1 {
   margin-top: 800px;
   margin-left: -600px;
 }
-
+/*COPYRIGHT*/
+.copyright {
+  font-family: 'Dosis', 'Lato', sans-serif;
+  margin-top: 62%;
+  right: 2%;
+  position: fixed;
+}
 
 /***************
 LOGO
 ***************/
 .logoTitle{
-  position: fixed;
+  position: absolute;
   margin-top: 59.5%;
-  margin-left: -39%;
+  margin-left: -37%;
   z-index:100;
 }
 
@@ -49,9 +55,27 @@ LOGO
   z-index:100;
   margin-top: 58%;
   margin-left: -49%;
-  position: fixed;
+  position: absolute;
 }
 
+/*STOP PLAYING MUSIC BUTTON*/
+.stopButton {
+  margin-top: 58%;
+  right: 6%;
+  height: 5%;
+  width: 5%;
+  position: absolute;
+  z-index: 100;
+}
+
+.playButton {
+  margin-top: 58%;
+  right: 9%;
+  height: 5%;
+  width: 5%;
+  position: absolute;
+  z-index: 100;
+}
 
 /***************
 
@@ -573,32 +597,6 @@ input[value="on"]:checked ~ .lamp:before {
 }
 body {background:#2f323c;}
 
-html, body {
-  width:100%;
-  height:100%;
-}
-/*COPYRIGHT*/
-.copyright {
-  margin-top: 52%;
-  right: 2%;
-  position: absolute;
-}
 
-/*STOP PLAYING MUSIC BUTTON*/
-.stopButton {
-  margin-top: 40%;
-  right: 2%;
-  height: 5%;
-  width: 5%;
-  position: absolute;
-  z-index: 100;
-}
 
-.playButton {
-  margin-top: 40%;
-  right: 8%;
-  height: 5%;
-  width: 5%;
-  position: absolute;
-  z-index: 100;
-}
+
