refactoring bubbleView, tweak inputOption behaviour

--- a/views/board.html
+++ b/views/board.html
@@ -27,6 +27,7 @@
     <script src="../js/apiFacade.js"></script>
     <script src="../js/helper.js"></script>
     <script src="../js/bubbleView.js"></script>
+    <script src="../js/inputOptions.js"></script>
     <script src="../js/bubble.js"></script>
     <script src="../js/connectionView.js"></script>
     <script src="../js/boardMain.js"></script>
