--- a/views/board.html
+++ b/views/board.html
@@ -46,7 +46,7 @@
       <a class="playButton">Play Music</a>
     </nav>
 
-    <div id="trashcan"><img src="../images/trash.png" height="80 px" alt="trashcan"></div>
+    <div id="trashcan"><img id="trashcanIcon" src="../images/trash.png" height="80 px" alt="trashcan"></div>
 
       <h3 class="logoTitle">INKLING<span style="color:red">.</span></h3>
       <img class="puzzle" src="https://cdn3.iconfinder.com/data/icons/brain-games/1042/Puzzle-grey.png" width="40cm" height="40cm">
